# PROJECT_TEMPLATE_TO_FORK

./: .gitignore  PROJECT_BOOTSTRAP_GUIDE.md  README.md  makefile  makefile copy  project_bootstrap.sh  pyproject.toml  validate_bootstrap.sh
